--- a/backend/package.json
+++ b/backend/package.json
@@ -14,8 +14,10 @@
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "mime-types": "^3.0.1",
-    "multer": "^1.4.4",
+    "multer": "^2.0.2",
+    "openai": "^5.20.2",
     "sharp": "^0.34.3",
+    "sqlite3": "^5.1.7",
     "tesseract.js": "^6.0.1"
   }
 }
