--- a/package.json
+++ b/package.json
@@ -1,23 +1,23 @@
 {
-  "name": "workspace",
-  "version": "1.0.0",
-  "description": "This repository contains a demo frontend (React + Vite) and a simple Express backend to simulate: - Web scraping (product page) - OCR parsing (mocked) - Rule engine for Legal Metrology compliance checks - A small dashboard UI for seller and backend views",
-  "main": "index.js",
+  "name": "compliscan-backend",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node backend/server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "better-sqlite3": "^12.2.0",
-    "dns": "^0.2.2",
+    "axios": "^1.4.0",
+    "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "express-rate-limit": "^8.1.0",
     "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "mime-types": "^3.0.1",
+    "multer": "^2.0.2",
     "openai": "^5.20.2",
     "sharp": "^0.34.3",
+    "sqlite3": "^5.1.7",
     "tesseract.js": "^6.0.1"
   }
 }
