--- a/backend/package.json
+++ b/backend/package.json
@@ -10,14 +10,17 @@
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-rate-limit": "^8.1.0",
-    "express-validator": "^7.2.1",
-    "helmet": "^8.1.0",
-    "mime-types": "^3.0.1",
-    "multer": "^2.0.2",
-    "openai": "^5.20.2",
-    "sharp": "^0.34.3",
-    "sqlite3": "^5.1.7",
-    "tesseract.js": "^6.0.1"
+    "express-rate-limit": "^6.7.0",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
+    "mime-types": "^2.1.35",
+    "multer": "^1.4.5-lts.1",
+    "openai": "^4.20.1",
+    "sharp": "^0.32.6",
+    "sqlite3": "^5.1.6",
+    "tesseract.js": "^5.0.4"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
